--- a/source/_posts/20190619_meshview.md
+++ b/source/_posts/20190619_meshview.md
@@ -1,16 +1,28 @@
-# 一、背景介绍
+---
+title: MeshView
+date: 2019-06-19
+description: [android] use drawBitmapMesh to get 3D effect 
+---
+
+# 0x0、必备知识
+  阅读本文之前，读者最好具备一定的OpenGL的开发背景，并了解OpenGL渲染流程。学习资源可以参考：
+  - [Learn OpenGL](https://learnopengl.com/)
+  - [OpenGL - Song Ho Ahn](http://www.songho.ca/opengl/index.html)
+
+# 0x1、背景介绍
   在项目开发中，经常需要开发一些炫酷的3D效果。在Android系统上，通常来说可以通过系统提供的OpenGL的java接口来实现（如GLES20.java）。android系统并提供了GLSurfaceView等一套框架机制，直接帮助开发者将gl环境准备好，开发者剩下的工作就是建立模型（model）、设计着色算法（shader）。但是GLSurfaceView整套机制相对来说还是比较重型（独立的gl渲染线程），功耗也比较大。然而有这么一些非常简单的3D特效，直接嵌入在用户交互界面里，对功耗的要求尽量要低，这个时候采用GLSrufaceView那套机制并不合适。
     
   经过一些调研，发现android原生的接口Canvas.drawBitmapMesh提供的能力可以帮助实现在任意view上的3D效果。本文介绍的内容就是：如果将OpengGL中建模以及渲染流程的知识和接口Canvas.drawBitmapMesh结合起来，并开发一个小的“渲染引擎”，将这种能力基线化。
     
-  <!-- <iframe width=180 height=390 src="./assets/meshview/face_guide.gif"> -->
-  效果演示
+  **示例**  
+
+  <img width=180 src="20190619_meshview/face_guide.gif">
+  <img width=180 src="20190619_meshview/num_picker.gif">
     
-# 二、原理介绍
+# 0x2、原理介绍
 
 ## Mesh原理
-  
-<img width=200 height=200 src="./assets/meshview/mesh_example.jpg">
+<img width=180 src="20190619_meshview/mesh_example.png">
 
 ## Canvas.drawBitmapMesh
 
@@ -60,10 +72,10 @@ public void drawBitmapMesh(@NonNull Bitmap bitmap, int meshWidth, int meshHeight
 
 OpenGL中vertex transformation：
 
-![gl_v_t](./assets/meshview/gl_vertex_transformation.png)
+![gl_v_t](20190619_meshview/vertex_render_process.png)
 
 对应的计算过程：
-![gl_v_c](./assets/meshview/gl_vertex_matrix.png)
+![gl_v_c](20190619_meshview/vertex_render_calculate.png)
 
 通常来讲，通过OpenGL开放的接口，实现3D效果（不考虑着色），需要提供：
 - local space建模数据：即vertex array in local space
@@ -88,4 +100,11 @@ https://github.com/hanxiatu-fc/MeshView
 
 # 四、遗留问题
 
-1. 目前只是简单的模拟了OpenGL背后的渲染流程，一些高级特性不具备。例如利用深度信息判断点的前后关系并裁剪的能力不具备。这样就要求使用者精确建模，避免出现有不同深度信息的点，否者绘制顺序无法保证最前面的点被后绘制（看到的现象就是物体背后的信息发生了穿透）
+- 目前只是简单的模拟了OpenGL背后的渲染流程，一些高级特性不具备。例如利用深度信息判断点的前后关系并裁剪的能力不具备。这样就要求使用者精确建模，避免出现有不同深度信息的点，否者绘制顺序无法保证最前面的点被后绘制（看到的现象就是物体背后的信息发生了穿透）
+
+  例如下图中，右边的示例底部发生了穿透现象。
+
+  <img width=180 src="20190619_meshview/calendar_3d_ok.png">
+  <img width=180 src="20190619_meshview/calendar_3d_error.png">
+
+- 目前本篇博客细节介绍的并不详细，待完善
