add \ for [ or ]

--- a/source/_posts/20190619_meshview.md
+++ b/source/_posts/20190619_meshview.md
@@ -1,7 +1,7 @@
 ---
 title: MeshView
 date: 2019-06-19
-description: [android] use drawBitmapMesh to get 3D effect 
+description: \[android\] use drawBitmapMesh to get 3D effect 
 ---
 
 # 0x0、必备知识
