fix pic size and add CNAME

--- a/source/_posts/20190619_meshview.md
+++ b/source/_posts/20190619_meshview.md
@@ -16,13 +16,13 @@ description: \[android\] use drawBitmapMesh to get 3D effect
     
   **示例**  
 
-  <img width=180 src="20190619_meshview/face_guide.gif">
-  <img width=180 src="20190619_meshview/num_picker.gif">
+![face_guide](20190619_meshview/face_guide.gif) ![num_picker](20190619_meshview/num_picker.gif)
+
     
 # 0x2、原理介绍
 
 ## Mesh原理
-<img width=180 src="20190619_meshview/mesh_example.png">
+![mesh](20190619_meshview/mesh_example.png)
 
 ## Canvas.drawBitmapMesh
 
@@ -72,10 +72,10 @@ public void drawBitmapMesh(@NonNull Bitmap bitmap, int meshWidth, int meshHeight
 
 OpenGL中vertex transformation：
 
-![gl_v_t](20190619_meshview/vertex_render_process.png)
+![vertex_render_process](20190619_meshview/vertex_render_process.png)
 
 对应的计算过程：
-![gl_v_c](20190619_meshview/vertex_render_calculate.png)
+![vertex_render_calculate](20190619_meshview/vertex_render_calculate.png)
 
 通常来讲，通过OpenGL开放的接口，实现3D效果（不考虑着色），需要提供：
 - local space建模数据：即vertex array in local space
@@ -104,7 +104,6 @@ https://github.com/hanxiatu-fc/MeshView
 
   例如下图中，右边的示例底部发生了穿透现象。
 
-  <img width=180 src="20190619_meshview/calendar_3d_ok.png">
-  <img width=180 src="20190619_meshview/calendar_3d_error.png">
+![ok](20190619_meshview/calendar_3d_ok.png)   ![error](20190619_meshview/calendar_3d_error.png)
 
 - 目前本篇博客细节介绍的并不详细，待完善
