[bugfix]: fix tile to 0x

--- a/source/_posts/20190619_meshview.md
+++ b/source/_posts/20190619_meshview.md
@@ -75,6 +75,7 @@ OpenGL中vertex transformation：
 ![vertex_render_process](20190619_meshview/vertex_render_process.png)
 
 对应的计算过程：
+
 ![vertex_render_calculate](20190619_meshview/vertex_render_calculate.png)
 
 通常来讲，通过OpenGL开放的接口，实现3D效果（不考虑着色），需要提供：
@@ -83,7 +84,7 @@ OpenGL中vertex transformation：
 - 视窗：即viewport
 
 
-# 三、Github工程 & 简介
+# 0x3、Github工程 & 简介
 **工程地址**
 https://github.com/hanxiatu-fc/MeshView
 
@@ -91,14 +92,14 @@ https://github.com/hanxiatu-fc/MeshView
 
 | MeshObject提供的接口 | 对应模拟的android系统接口 |
 | ------ | ------ |
-| viewport | android.opengl.GLES.viewport|
+| viewport | android.opengl.GLES20.glviewport|
 | ortho | android.opengl.Matrix.orthoM |
 | frustum | android.opengl.Matrix.frustumM |
 | perspective | android.opengl.Matrix.perspectiveM |
 | setLookAt | android.opengl.Matrix.setLookAtM|
 
 
-# 四、遗留问题
+# 0x4、遗留问题
 
 - 目前只是简单的模拟了OpenGL背后的渲染流程，一些高级特性不具备。例如利用深度信息判断点的前后关系并裁剪的能力不具备。这样就要求使用者精确建模，避免出现有不同深度信息的点，否者绘制顺序无法保证最前面的点被后绘制（看到的现象就是物体背后的信息发生了穿透）
 
