update blog of 20190619_meshview

--- a/source/_posts/20190619_meshview.md
+++ b/source/_posts/20190619_meshview.md
@@ -84,21 +84,63 @@ OpenGL中vertex transformation：
 - 视窗：即viewport
 
 
-# 0x3、Github工程 & 简介
-**工程地址**
+# 0x3、工程实践简介
+**OpenGL流程和MeshiView实践对比**
 
-https://github.com/hanxiatu-fc/MeshView
+1. OpengGL的流程
+![gl_render_outline](20190619_meshview/gl_render_outline.png)
+可以看到在android的OpenGL开发过程中，数据的处理过程是黑盒的（即Not visible to developer），开发人员只需要传入这个几方面的数据：
+- Vertex Model ： Local space 对3D物体建模之后的顶点数据 & modle matrix
+- viewport ：通过GLES.glviewport设置
+- view matrix: 通过Matrix - GLES20系列接口传递(setLookAtM)
+- projection matrix: 通过Matrix - GLES20系列接口传递(orthoM、frustumM、perspectiveM)
 
-**简介**
+2. MeshView实践
+![meshview_render_outline](20190619_meshview/meshview_render_outline.png)
+因为Mesh并不走传统的android的OpenGL的流程，所以GLES20的接口都不会被使用，所以需要做如下工作
+- Vertex Model：同OpenGL
+- viewport、setLookAt、ortho、frustum、perspective 等接口
+- 使用内部私有方法@Method:mesh实现 vertex * MVP（其实在OpenGL中一般实在vertex shader中实现，可以灵活实现，但基本上就是vertex * MVP）
+- 将准备好的verts传递给Canvas.drawBitmapMesh处理
 
-| MeshObject提供的接口 | 对应模拟的android系统接口 |
+**模拟接口对比**
+
+| 提供的接口 | 对应模拟的android系统接口 |
 | ------ | ------ |
-| viewport | android.opengl.GLES20.glviewport|
-| ortho | android.opengl.Matrix.orthoM |
-| frustum | android.opengl.Matrix.frustumM |
-| perspective | android.opengl.Matrix.perspectiveM |
-| setLookAt | android.opengl.Matrix.setLookAtM|
+| MeshObject.viewport | android.opengl.GLES20.glviewport|
+| MeshObject.ortho | android.opengl.Matrix.orthoM |
+| MeshObject.frustum | android.opengl.Matrix.frustumM |
+| MeshObject.perspective | android.opengl.Matrix.perspectiveM |
+| MeshObject.setLookAt | android.opengl.Matrix.setLookAtM|
 
+**核心计算方法**
+```
+    private Vec3 mesh(Vec4 vert, float[] mvpMatrix) {
+        float[] from = new float[] {vert.x, vert.y, vert.z, vert.w};
+        float[] to = new float[4];
+        Matrix.multiplyMV(to,0, mvpMatrix,0, from,0);
+
+        Vec4 clip = new Vec4(to[0], to[1], to[2], to[3]);
+
+        Vec4 ndc = new Vec4(clip.x/clip.w, clip.y/clip.w, clip.z/clip.w, 1.0f);
+
+        ViewPort viewPort = getViewPort();
+        float x = viewPort.x;
+        float y = viewPort.y;
+        float w = viewPort.w;
+        float h = viewPort.h;
+        float n = viewPort.n;
+        float f = viewPort.f;
+
+        float wx = w/2 * (ndc.x + 1) + x;
+        float wy = h/2 * (ndc.y + 1) + y;
+        float wz = (f - n)/2 * ndc.z + (f + n)/2;
+
+        return new Vec3(wx, wy, wz);
+    }
+```
+
+*`注：抱歉，完整的工程因个人原因已从github删除。只保留如上最核心的函数。`*
 
 # 0x4、遗留问题
 
